Add ability to delete transaction
