# swagger.yaml
@@ -219,29 +219,28 @@ paths:
 #          description: "Transaction not found"
 #        "405":
 #          description: "Validation exception"
-#  /transaction/delete/{transactionId}:
-#    delete:
-#      tags:
-#      - "Transaction"
-#      summary: "Deletes a transaction"
-#      description: ""
-#      operationId: "deleteTransaction"
-#      produces:
-#      - "application/json"
-#      parameters:
-#      - name: "transactionId"
-#        in: "path"
-#        description: "Transaction id to delete"
-#        required: true
-#        type: "integer"
-#        format: "int64"
-#      responses:
-#        "200":
-#          description: "Successful operation"
-#        "400":
-#          description: "Invalid ID supplied"
-#        "404":
-#          description: "Transaction not found"
+  /transaction/delete/{transactionId}:
+    delete:
+      tags:
+      - "Transaction"
+      summary: "Deletes a transaction"
+      description: ""
+      operationId: "endpoints.transaction.rm_transaction.rmtran"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "transactionId"
+        in: "path"
+        description: "Transaction id to delete"
+        required: true
+        type: "string"
+      responses:
+        "200":
+          description: "Successful operation"
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Transaction not found"
 #  /customer/new:
 #    post:
 #      tags:
